PR26673: ko gcc compilation error would happen when -DMAXBACKTRACE=N and N > 60

We should allocate the entries[] array in struct context instead of on
the kernel stack.

Also added a test case to cover this case.

Thanks my colleague Junlong Li for the original patch.